--- a/core/Makefile
+++ b/core/Makefile
@@ -1,11 +1,8 @@
 CC = g++
-#FLAGS = --shared -g -Wall -fPIC
-#FLAGS = -g -Wall 
 FLAGS = -g -D _USE_HASH_
-#LIBS_INSTALL_DIR = ../../libs
 INC = -I./libevent-1.4.14-stable -I./jsoncpp/include -I./cppjieba/include -I./cppjieba/deps
-#EXE = 3rd_ip_entry.so
 EXE = comse
+JSONLIB = libjsoncpp.a
 
 CPPSOURCES=$(wildcard *.cpp)
 CPPOBJS=$(patsubst %.cpp, %.o,$(CPPSOURCES))
@@ -13,7 +10,7 @@ CPPOBJS=$(patsubst %.cpp, %.o,$(CPPSOURCES))
 SOURCES = $(CSOURCES) 
 OBJS = $(CPPOBJS)
 
-LIBS = ./libevent-1.4.14-stable/.libs/libevent.a ./libjsoncpp.a -lpthread
+LIBS = ./libevent-1.4.14-stable/.libs/libevent.a ./libjsoncpp.a -lpthread -lrt
 
 all: $(EXE)
 
@@ -22,7 +19,13 @@ all: $(EXE)
 %.o:%.cpp
 	$(CC) -c $(FLAGS) $(INC) -o $@ $<
 
-$(EXE): $(OBJS)
+$(JSONLIB): 
+	$(CC) -c $(FLAGS)  -I./jsoncpp/include/ -o jsoncpp/src/lib_json/json_reader.o jsoncpp/src/lib_json/json_reader.cpp
+	$(CC) -c $(FLAGS)  -I./jsoncpp/include/ -o jsoncpp/src/lib_json/json_value.o jsoncpp/src/lib_json/json_value.cpp
+	$(CC) -c $(FLAGS)  -I./jsoncpp/include/ -o jsoncpp/src/lib_json/json_writer.o jsoncpp/src/lib_json/json_writer.cpp
+	ar crv $(JSONLIB)  jsoncpp/src/lib_json/json_reader.o  jsoncpp/src/lib_json/json_value.o  jsoncpp/src/lib_json/json_writer.o
+
+$(EXE): $(JSONLIB) $(OBJS)
 	$(CC) $(FLAGS) $(INC) -o $(EXE) $(OBJS) $(LIBS)
 clean:
-	rm -rf $(OBJS) $(EXE) core.*
+	rm -f $(OBJS) jsoncpp/src/lib_json/*.o $(JSONLIB) $(EXE) core.*
